Downgrade the project to Java 1.8.